--- a/app/src/main/res/layout/add.xml
+++ b/app/src/main/res/layout/add.xml
@@ -22,7 +22,7 @@
         android:inputType="textMultiLine" />
 
     <Button
-        android:id="@+id/add"
+        android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="save"
