lesson 7: intent with args: image button

--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -19,14 +19,17 @@
 
     <Button
         android:id="@+id/editButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="74dp"
+        android:layout_height="77dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/img_rose"
-        android:hint="Edit"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/img_tomatoes"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/desc"
@@ -43,10 +46,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="40dp"
         android:gravity="center|center_vertical"
-        android:text="Push me"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Edit item"
+        app:layout_constraintEnd_toEndOf="@+id/editButton"
         app:layout_constraintTop_toBottomOf="@+id/editButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
