--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -51,4 +51,15 @@
         app:layout_constraintEnd_toEndOf="@+id/editButton"
         app:layout_constraintTop_toBottomOf="@+id/editButton" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="235dp"
+        android:layout_height="157dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editButton"
+        app:layout_constraintVertical_bias="0.448"
+        app:srcCompat="@drawable/chocolate" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
