--- a/app/src/main/res/layout/fragment1.xml
+++ b/app/src/main/res/layout/fragment1.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="272dp"
         android:layout_marginEnd="16dp"
+        android:gravity="center_horizontal|center_vertical"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,8 +25,9 @@
         android:id="@+id/buttonSreen1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:text="To screen #0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="60dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
